ｖｉｅｗ関係の改修とＹｏｕｔｕｂｅＡＰＩの実装。 調整として、取得先と取得後の型変換を考える

--- a/app/src/main/res/layout/recycler_schedule_view.xml
+++ b/app/src/main/res/layout/recycler_schedule_view.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
-            android:id="@+id/tvImag"
+            android:id="@+id/tvImg"
             android:layout_width="160dp"
             android:layout_height="90dp"
             tools:background="@drawable/hqdefault_live" />
