時間表示の変更

--- a/app/src/main/res/layout/fragment_main_schedule.xml
+++ b/app/src/main/res/layout/fragment_main_schedule.xml
@@ -71,7 +71,8 @@
         android:id="@+id/lvSchedule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:background="@drawable/border"/>
 
     </LinearLayout>
 </FrameLayout>
