--- a/app/src/main/res/layout/recycler_schedule_view.xml
+++ b/app/src/main/res/layout/recycler_schedule_view.xml
@@ -25,8 +25,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@drawable/border"
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp"
         app:layout_constraintTop_toBottomOf="@+id/topLinearLayout">
 
         <ImageView
@@ -58,6 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
+                    android:textStyle="bold"
                     android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
                     tools:text="@string/distributor" />
@@ -74,6 +78,7 @@
                 android:visibility="gone"/>
 
             <TextView
+                android:layout_marginTop="5dp"
                 android:id="@+id/tvBroadcastTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
