--- a/app/src/main/res/drawable/border_gray.xml
+++ b/app/src/main/res/drawable/border_gray.xml
@@ -6,5 +6,5 @@
     android:layout_width="wrap_content">
     <stroke
         android:width="1dp"
-        android:color="#000000"/>
+        android:color="#dcdcdc"/>
 </shape>
