--- a/app/src/main/res/layout/fragment_main_schedule.xml
+++ b/app/src/main/res/layout/fragment_main_schedule.xml
@@ -72,7 +72,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border_black"
+        android:padding="1dp"/>
 
     </LinearLayout>
 </FrameLayout>
