--- a/app/src/main/res/layout/recycler_schedule_view.xml
+++ b/app/src/main/res/layout/recycler_schedule_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,9 +15,11 @@
 
         <TextView
             android:id="@+id/tvScheduleTime"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
             android:layout_weight="1"
+            android:textStyle="bold"
             tools:text="@string/schedule_time" />
 
     </LinearLayout>
@@ -26,8 +27,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/border_gray"
         android:orientation="horizontal"
-        android:background="@drawable/border"
         android:paddingTop="1dp"
         android:paddingBottom="1dp"
         app:layout_constraintTop_toBottomOf="@+id/topLinearLayout">
@@ -36,6 +37,7 @@
             android:id="@+id/ivImg"
             android:layout_width="160dp"
             android:layout_height="90dp"
+            android:layout_margin="5dp"
             tools:background="@drawable/hqdefault_live" />
 
         <LinearLayout
@@ -44,26 +46,25 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_marginTop="3dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="3dp"
                 android:orientation="horizontal">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:visibility="gone"
-                tools:background="@drawable/ic_test_kazami_kuku"
-                tools:visibility="visible"/>
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    tools:background="@drawable/ic_test_kazami_kuku"
+                    tools:visibility="gone" />
 
                 <TextView
                     android:id="@+id/tvDistributor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:textSize="15sp"
                     tools:text="@string/distributor" />
 
             </LinearLayout>
@@ -75,14 +76,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/broadcast_status"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <TextView
-                android:layout_marginTop="5dp"
                 android:id="@+id/tvBroadcastTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lines="2"
+                android:lines="3"
+                android:textSize="12sp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/broadcast_title" />
 
         </LinearLayout>
